# napalm-digineo-procurve

./: .bumpversion.cfg  .editorconfig  .gitignore  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
examples/: example.py
src/napalm_digineo_procurve/: __init__.py  device.py  dialer.py  driver.py
src/napalm_digineo_procurve/queries/: device_info.py  interfaces.py  lldp_neighbors.py  mib.py  system_info.py  uptime.py
src/napalm_digineo_procurve/templates/: parser.py  reader.py
src/napalm_digineo_procurve/templates/assets/: display-device-manuinfo  interfaces-brief  lldp-info-remote-device  system-information
tests/: test_queries.py
tests/assets/: display-device-manuinfo_example  interfaces-brief_example  lldp-info-remote-device_example
