[metadata]
name = napalm-digineo-procurve
version = 0.1.4
description = napalm driver for aruba procurve switches
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
maintainer = Arthur Skowronek
maintainer_email = ags@digineo.de
url = https://github.com/digineo/napalm-digineo-procurve
license = Apache Software License 2.0
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: System Administrators
  License :: OSI Approved
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: System
  Topic :: System :: Networking
  Topic :: System :: Networking :: Monitoring
project_urls =
  Bug Tracker = https://github.com/digineo/napalm-digineo-procurve/issues
  Source Code = https://github.com/digineo/napalm-digineo-procurve/

[options]
zip_safe = True
include_package_data = True
install_requires =
  pathlib2 ~=2.3.3 ; python_version < "3.6"
  dataclasses >=0.6,<1.0 ; python_version < "3.7"
  importlib_resources ~=1.0.2 ; python_version < "3.7"
  napalm ~=2.4.0
package_dir =
  =src
packages = find:

[options.packages.find]
where=src

[coverage:paths]
source =
  src
  */site-packages

[coverage:run]
branch = true
source =
  napalm_digineo_procurve
  tests
parallel = true

[coverage:report]
show_missing = true
precision = 2

[coverage:html]
directory = reports/coverage
